--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Build Debian package
         run: |
           mkdir -p build/mf2b
-          cp -R DEBIAN etc usr README.md build/mf2b/
+          cp -R DEBIAN etc usr build/mf2b/
           cd build
           dpkg-deb --build mf2b
 
